Remove errors and simplify reversing filtered courses.